# idea-to-real

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents/: base.py  critique.py  exceptions.py  inquiry.py  summarizer.py  test_base_retry.py  test_exceptions.py  test_gemini_error_mapping.py  test_other_error_mapping.py  test_providers.py  test_summarizer.py  test_utils.py  utils.py
chat/: models.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_session_metadata_session_step_count.py  0003_alter_message_sender.py
chat/templates/chat/: base.html  detail.html  index.html
conductor/: plan.md  product-guidelines.md  product.md  spec.md  tech-stack.md  tracks.md
conductor/archive/add_ollama_provider_20260420/: index.md
conductor/archive/inquiry_engine_20260408/: metadata.json  plan.md
conductor/archive/interactive_chat_feedback_20260422/: index.md  metadata.json  plan.md
conductor/archive/langgraph_inquiry_transition_20260414/: index.md  metadata.json  plan.md
conductor/archive/multi_agent_llm_packaging_20260413/: plan.md  spec.md
conductor/archive/simplify_inquiry_20260421/: index.md  metadata.json
conductor/tracks/add_ollama_provider_20260420/: metadata.json  plan.md  spec.md
config/: settings.py
tests/: test_analyzer_node.py  test_django_integration.py  test_edge_logic.py  test_empathizer_node.py  test_full_workflow.py  test_inquiry_agent.py  test_inquiry_graph.py  test_langgraph_setup.py  test_ollama_integration.py  test_questioner_node.py  test_settings.py
(+13 files in other folders)
