[project]
name = "idea-to-real"
version = "0.1.0"
description = "Problem Specification AI System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.13",
    "django-environ>=0.13.0",
    "google-genai>=1.72.0",
    "openai>=2.31.0",
    "anthropic>=0.94.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "langgraph",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "chat", "config"]
